Unterstützung für FLACI Im- und Export

--- a/src/main/resources/strings.properties
+++ b/src/main/resources/strings.properties
@@ -1,13 +1,16 @@
 chooser.formats.JFLAP=JFLAP-Datei
 chooser.formats.TXT=Textdatei
 chooser.formats.XML=XML-Datei
-chooser.openJFLAP=JFLAP-Datei öffnen
+chooser.formats.FLACI=FLACI-Datei
+chooser.formats.JSON=JSON-Datei
+chooser.openJFLAP=JFLAP-Datei ï¿½ffnen
 chooser.saveJFF=JFLAP-Datei speichern
 chooser.saveScript=Skript speichern
-error.noFile=Keine Datei ausgewählt!
+error.noFile=Keine Datei ausgewï¿½hlt!
 ui.browse=Durchsuchen
 ui.convert=In Skript konvertieren
 ui.jffPath=Dateipfad
 ui.saveJFLAP=Als JFLAP-Datei speichern
+ui.saveFLACI=Als FLACI-Datei speichern
 ui.saveScript=Skript speichern
 ui.title=JFTS Converter
