--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ repositories {
     mavenCentral()
 }
 
-targetCompatibility = sourceCompatibility = 10
+targetCompatibility = sourceCompatibility = 11
 mainClassName='eu.antifuse.jftsjava.Main'
 
 javafx {
@@ -24,6 +24,7 @@ javafx {
 dependencies {
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
     implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
 
 test {
